added header, added fonts

--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -21,8 +21,8 @@ h4,
 h5,
 h6,
 p,
-ul[class],
-ol[class],
+ul,
+ol,
 li,
 figure,
 figcaption,
@@ -45,5 +45,9 @@ input,
 button,
 textarea,
 select {
-font: inherit;
+  font: inherit;
+}
+
+a{
+  text-decoration: none;
 }
