--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,94 @@
 @import 'reset';
 @import 'global';
 
+.header{
+  padding: 50px 0 45px;
+}
 
+.header__inner{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu{
+  &__list{
+    display: flex;
+  }
+  &__list-item + .menu__list-item{
+    margin-left: 30px;
+  }
+  &__list-link{
+    @extend %rubik-500;
+    font-size: 15px;
+    line-height: 12px;
+    color: #436372;
+  }
+}
+
+.user-nav{
+  display: flex;
+  align-items: center;
+  &__link--search{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-color: #edf1f4;
+    border-radius: 50%;
+    margin-right: 20px;
+  }
+  &__wrapper{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 15px 0;
+    width: 180px;
+    background-color: #fcd7b6;
+    border-radius: 25px;
+    margin-right: 20px;
+    position: relative;
+    &::after{
+      content: "";
+      position: absolute;
+      width: 1px;
+      height: 35px;
+      background-color: #fff;
+      left: 50%;
+      transform: translateY(-50%);
+      transform: translateX(-50%);
+      z-index: 3;
+    }
+  }
+  &__link{
+    position: relative;
+  }
+  &__num{
+    position: absolute;
+    top: -9px;
+    right:-10px;
+    background-color: #fff;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    font-size: 10px;
+    line-height: 16px;
+    text-align: center;
+  }
+  &__btn{
+    border: none;
+    padding: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #a3bbc8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+}
 
 
 
