--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -94,5 +94,95 @@
 
 
 
+.footer-top{
+  padding: 80px 0 70px;
+  border-bottom: 1px solid #dae4e9;
+  display: flex;
+  justify-content: space-between;
+  &__contacts{
+    width: 195px;
+  }
+  &__logo{
+    margin-bottom: 25px;
+  }
+  &__adress,
+  &__phone,
+  &__email{
+    margin-bottom: 15px;
+  }
+  &__nav{
+    width: 130px;
+  }
+  &__title{
+    @extend %dmsans-700;
+    font-size: 16px;
+    line-height: 50px;
+    color: #1f2044;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+  &__list-item{
+    margin-bottom: 10px;
+  }
+  &__newsletter{
+    width: 275px;
+  }
+  &__text{
+    @extend %rubik-400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #7b7b7b;
+    margin-bottom: 25px;
+  }
+  &__form-input{
+    width: 170px;
+    padding: 10px 5px 10px 10px;
+    border: none;
+    background-color: #fef7f0;
+    &::placeholder{
+      @extend %dmsans-400;
+      font-size: 12px;
+      color: #234969;
+    }
+  }
+  &__form-btn{
+    @extend %dmsans-400;
+    font-size: 14px;
+    color: #fff;
+    border: none;
+    background-color: #a3bbc8;
+    padding: 10px 10px;
+    width: 100px;
+    text-align: center;
+    cursor: pointer;
+  }
+}
+
+.footer-bottom{
+  height: 90px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &__copy{
+    @extend %rubik-400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #7b7b7b;
+  }
+  &__nav-list{
+    display: flex;
+  }
+  &__nav-item{
+    padding: 0 15px;
+    &:last-child{
+      padding-right: 0;
+    }
+  }
+  &__nav-item + .footer-bottom__nav-item{
+    border-left: 1px solid #7b7b7b;
+  }
+}
+
+
 
 @import 'media';
