added section slider

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,3 +1,8 @@
+$accent-bg: #fcd7b6;
+$accentlight-bg: #fef7f0;
+$title: #243f4d;
+
+
 %rubik-400{
   font-family: 'Rubik-Regular', sans-serif;
   font-weight: 400;
