--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -27,3 +27,11 @@ $title: #243f4d;
   font-family: 'Poppins-Bold', sans-serif;
   font-weight: 700;
 }
+
+
+@function max($numbers...) {
+  @return m#{a}x(#{$numbers});
+}
+@function min($numbers...) {
+  @return m#{i}n(#{$numbers});
+}
