--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -317,7 +317,7 @@
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 30px;
     min-height: 800px;
-    margin-bottom: 80px;
+    margin-bottom: 180px;
   }
   &__item{
     background-repeat: no-repeat;
@@ -364,10 +364,56 @@
   }
   &__box-link + .products__box-link{
     margin-left: 15px;
-  }  
-}
-.mixitup-control-active{
-  color: #000;
+  }
+  &__tabs{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__tabs-item{
+    max-width: 870px;
+    width: 100%;
+    background-color: #feefe2;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 100px;
+  }
+  &__tabs-img{
+    margin-top: -100px;
+    object-fit: contain;
+  }
+  &__tabs-content{
+    padding-top: 100px;
+    max-width: 340px;
+    margin-left: 60px;
+    color: #243f4d;
+  }
+  &__tabs-title{
+    @extend %dmsans-700;
+    font-size: 26px;
+    line-height: 32px;
+    margin-bottom: 15px;
+  }
+  &__tabs-desc{
+    @extend %rubik-400;
+    line-height: 30px;
+    margin-bottom: 20px;
+  }
+  &__tabs-link{
+    padding: 23px 20px;
+    @extend %rubik-500;
+    font-size: 15px;
+    color: #436372;
+    background-color: transparent;
+    border: 1px solid #b3b7b5;
+    border-radius: 5px;
+    max-width: 180px;
+    width: 100%;
+    svg{
+      float: right;
+      fill: #436372;
+    }
+  }
 }
 
 .design{
@@ -393,6 +439,7 @@
     padding-left: 40px;
     background-color: #f8f8f8;
     background-repeat: no-repeat;
+    position: relative;
     &:nth-child(3),
     &:nth-child(5){
       background-position: 210px;
@@ -409,6 +456,13 @@
       display: block;
       margin-top: 10px;
     }
+  }
+  &__item-link{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
   &__video{
     background-repeat: no-repeat;
