--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -474,6 +474,98 @@
   }
 }
 
+.articles{
+  padding: 55px 0;
+  &__title{
+    margin-bottom: 40px;
+  }
+  &__view-link{
+    float: right;
+    margin-top: -70px;
+    padding-right: 25px;
+    position: relative;
+    @extend %dmsans-700;
+    font-size: 16px;
+    line-height: 1;
+    color: #262626;
+    display: inline;
+    &::after{
+      content: ">";
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item{
+    max-width: 370px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
+    display: flex;
+    flex-direction: column;
+  }
+  &__item-link{
+    @extend %poppins-700;
+    font-size: 14px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #a3bbc8;
+    width: 103px;
+    padding: 5px 5px;
+    text-align: center;
+    border-radius: 50px;
+    position: absolute;
+    top: 235px;
+    left: 30px;
+  }
+  &__content{
+    padding: 35px 30px 20px;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+  }
+  &__text{
+    padding-bottom: 20px;
+    @extend %dmsans-500;
+    font-size: 18px;
+    line-height: 1;
+    color: #262626;
+  }
+  &__content-date{
+    @extend %rubik-400;
+    font-size: 12px;
+    line-height: 30px;
+    color: #222933;
+    border-top: 1px solid #e0e0e0;
+    margin-top: auto;
+    padding-top: 15px;
+    align-content: flex-end;
+    text-transform: uppercase;
+    span{
+      margin-left: 35px;
+    }
+  }
+}
+
+.partners{
+  background-color: $accentlight-bg;
+  padding: 100px 0;
+  &__wrapper{
+    display: flex;
+    justify-content: center;
+  }
+  &__img{
+    margin: 0 45px;
+  }
+}
+
 
 
 
