--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,6 +8,7 @@ body{
   line-height: 22px;
   display: flex;
   flex-direction: column;
+  @extend %rubik-400;
 }
 
 .main{
@@ -38,6 +39,7 @@ a{
   @extend %dmsans-700;
   font-size: 36px;
   line-height: 48px;
+  color: $title;
 }
 
 .btn-link{
