--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -604,6 +604,10 @@
     object-fit: contain;
   }
 }
+.partners--page-login{
+  margin-top: 60px;
+  padding-top: 0;
+}
 
 .about{
   padding: 120px 0 60px;
@@ -785,6 +789,81 @@
       path{
         fill: rgb(163, 187, 200);
       }
+    }
+  }
+}
+
+.modal{
+  max-width: 470px;
+  margin: 0 auto;
+  padding: 120px 0 60px;
+  &__form{
+    width: 100%;
+    color: #436372;
+    font-size: 14px;
+    line-height: 1;
+  }
+  &__label{
+    display: block;
+    margin-bottom: 30px;
+  }
+  &__input{
+    display: block;
+    margin-top: 13px;
+    border: 2px solid #f6f6f6;
+    width: 100%;
+    padding: 15px 10px;
+    font-size: 18px;
+    border-radius: 3px;
+  }
+  &__btn{
+    border: none;
+    background-color: #a3bbc8;
+    padding: 20px 10px;
+    border-radius: 3px;
+    width: 100%;
+    text-align: center;
+    @extend %rubik-500;
+    font-size: 18px;
+    line-height: 1;
+    color: #fff;
+    cursor: pointer;
+    margin-bottom: 30px;
+    transition: all .5s;
+    &:hover{
+      background-color: $title;
+    }
+  }
+  &__wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+    input,label,a{
+      margin: 0;
+      color: inherit;
+    }
+  }
+  &__not-reg{
+    padding-top: 25px;
+    margin-bottom: 20px;
+    border-top: 2px solid #f6f6f6;
+    text-align: center;
+  }
+  &__link-create{
+    text-align: center;
+    width: 100%;
+    padding: 20px 10px;
+    border: 2px solid #a3bbc8;
+    border-radius: 3px;
+    @extend %rubik-500;
+    font-size: 18px;
+    line-height: 1;
+    color: $title;
+    transition: all .5s;
+    &:hover{
+      background-color: $title;
+      color: #fff;
     }
   }
 }
