--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -868,6 +868,30 @@
   }
 }
 
+.terms{
+  padding: 120px 0 60px;
+  color: $title;
+  line-height: 30px;
+  &__title{
+    @extend %rubik-500;
+    font-size: 24px;
+    line-height: 40px;
+    margin-bottom: 10px;
+  }
+  &__list{
+    list-style-type: decimal-leading-zero;
+    margin-left: 40px;
+    margin-bottom: 50px;
+  }
+  &__list-item{
+    margin-bottom: 20px;
+    padding-left: 7px;
+  }
+  &__text{
+    margin-bottom: 50px;
+  }
+}
+
 
 
 
