--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -28,6 +28,14 @@ $title: #243f4d;
   font-weight: 700;
 }
 
+%input-checkbox{
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  position: absolute;
+}
+
 
 @function max($numbers...) {
   @return m#{a}x(#{$numbers});
