--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -114,3 +114,41 @@ a{
   }
 }
 
+.pagination{
+  margin-top: 110px;
+  transform: translateX(13%);
+  &__list{
+    display: flex;
+    justify-content: center;
+  }
+  &__item{
+    margin-right: 15px;
+    &:last-child{
+      margin-right: 0;
+    }
+  }
+  &__link,
+  &__link-next{
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    color: $title;
+    border: 1px solid #a3bbc8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    transition: all .3s;
+    &:hover{
+      background-color: #a3bbc8;
+      color: #fff;
+    }
+  }
+  &__link--active{
+    background-color: #a3bbc8;
+    color: #fff;
+  }
+  &__link-next{
+    width: 75px;
+  }
+}
