--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -515,6 +515,13 @@
     display: flex;
     flex-direction: column;
   }
+  &__img{
+    width: 370px;
+    height: 250px;
+    object-fit: cover;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
   &__item-news{
     @extend %poppins-700;
     font-size: 14px;
@@ -1074,7 +1081,128 @@
   }
 }
 
+.blog{
+  padding: 120px 0 60px;
+  &__inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__content{
+    width: 830px;
+  }
+  &__sidebar{
+    width: 270px;
+  }
+  &__recent-post{
+    display: flex;
+    margin-bottom: 25px;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  &__recent-img-link{
+    max-width: 70px;
+  }
+  &__recent-img{    
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+  }
+  &__recent-desc{
+    margin-left: 20px;
+    width: 180px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #333;
+  }
+  &__recent-date{
+    font-size: 12px;
+    line-height: 30px;
+    color: #9a9a9a;
+  }
+}
 
+.blog-item{
+  margin-bottom: 50px;
+  &:last-child{
+    margin-bottom: 0;
+  }
+  &__img{
+    max-width: 830px;
+    width: 100%;
+  }
+  &__info{
+    display: inline-flex;
+    background-color: #a3bbc8;
+    padding: 25px 30px;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 12px;
+    margin-top: -25px;
+    transform: translateY(-68%);
+  }
+  &__date{
+    margin-right: 20px;
+  }
+  &__title{
+    @extend %rubik-400;
+    font-size: 36px;
+    color: #333;
+    margin-bottom: 25px;
+  }
+  &__text{
+    color: $title;
+    margin-bottom: 30px;
+    line-height: 30px;
+  }
+  &__link{
+    font-size: 15px;
+    width: 180px;
+    border: 1px solid #a3bbc8;
+    color: #a3bbc8;
+    padding: 18px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: all .5s;
+    &:hover{
+      background-color: #a3bbc8;
+      color: #fff;
+      path{
+        fill: #fff;
+      }      
+    }
+  }
+}
+
+.filter-search{
+  margin-bottom: 55px;
+  &__form{
+    display: flex;
+  }
+  &__input{
+    border: 2px solid #edf1f4;
+    width: 220px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    outline-color: #a3bbc8;
+    height: 40px;
+    padding: 0 7px;
+  }
+  &__btn{
+    height: 40px;
+    width: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    border: 2px solid #edf1f4;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: #edf1f4;
+    cursor: pointer;
+  }
+}
 
 
 
